--- a/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
@@ -88,7 +88,7 @@
 		}
 
 		img {
-			max-width: 100%;
+			max-width: initial;
 			perspective: none !important;
 			backface-visibility: initial !important;
 		}
