#1051 - Fixed icon issue on text formatting toolbar

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -428,7 +428,7 @@
 	}
 }
 
-.medium-editor-toolbar-actions {
+ul.medium-editor-toolbar-actions {
 
 	.medium-editor-action b {
 		font-family: bb-icons;
