Changing '?hello=buddyboss' to '?about=buddyboss'

--- a/src/bp-core/admin/css/hello-rtl.css
+++ b/src/bp-core/admin/css/hello-rtl.css
@@ -1,5 +1,5 @@
 /*------------------------------------------------------------------------------
-Loaded in wp-admin for query string `hello=buddyboss` and `hello=appboss`.
+Loaded in wp-admin for query string `about=buddyboss` and `hello=appboss`.
 
 @since BuddyPress 3.0.0
 
