change repeater-empty class name, and made it color #ccc

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -90,6 +90,10 @@
 				min-width: 0;
 			}
 
+			.repeater_set_title_empty {
+				color: #ccc;
+			}
+
 			.repeater_set_edit {
 				margin-left: auto;
 				margin-right: 5px;
