--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2633,6 +2633,32 @@ span.dashicons.dashicons-admin-file:before {
   line-height: 1.5;
 }
 
+#buddypress .bb-media-model-wrapper.media-theatre .activity-list.bp-list {
+  position: relative;
+  height: 100%;
+  display: inline-block;
+}
+
+#buddypress .bb-media-model-wrapper.media-theatre .activity-list.bp-list .activity-item {
+  margin-bottom: 40px;
+  max-height: calc(90vh - 40px);
+  min-height: calc(90vh - 40px);
+  position: static;
+}
+
+#buddypress .bb-media-model-wrapper.media-theatre .activity-list.bp-list .download-media {
+  position: absolute;
+  bottom: 0;
+  z-index: 999999;
+  right: 0;
+  left: 0;
+  text-align: center;
+  padding: 10px;
+  border-top: 1px solid #ecedee;
+  background-color: #fff;
+  line-height: 1.5;
+}
+
 .activity-media-description {
   margin-bottom: 10px;
 }
