media popup css

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -827,6 +827,7 @@ span.dashicons.dashicons-admin-file:before {
 			border-top: 1px solid #ecedee;
 			background-color: #fff;
 			line-height: 1.5;
+			font-size: 15px;
 		}
 
 	}
