--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -2656,6 +2656,7 @@ span.dashicons.dashicons-admin-file:before {
   border-top: 1px solid #ecedee;
   background-color: #fff;
   line-height: 1.5;
+  font-size: 15px;
 }
 
 .activity-media-description {
