--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -14690,6 +14690,16 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   text-align: left !important;
 }
 
+#bp-media-create-folder .error-box {
+  display: none;
+  line-height: 1.3;
+  margin-top: 5px;
+}
+
+#bp-media-create-folder #bb-album-title.error + .error-box {
+  display: block;
+}
+
 .modal-container.has-folderlocationUI .bb-model-footer a.saving, .modal-container.has-folderlocationUI .bb-model-footer a.loading {
   pointer-events: none;
 }
