#1084 Activity feed - distorted small images

--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -11694,7 +11694,7 @@ body.login .login-popup .mfp-close:hover {
   z-index: 0;
   min-height: 100%;
   width: auto;
-  min-width: 100%;
+  min-width: auto;
   object-fit: cover;
 }
 
