--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -11694,7 +11694,7 @@ body.login .login-popup .mfp-close:hover {
   z-index: 0;
   min-height: 100%;
   width: auto;
-  min-width: 100%;
+  min-width: auto;
   object-fit: cover;
 }
 
