--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -11658,6 +11658,11 @@ body.login .login-popup .mfp-close:hover {
   min-width: 0;
 }
 
+.bb-media-length-1 .bb-activity-media-elem .entry-img img {
+  min-height: auto;
+  min-width: auto;
+}
+
 .bb-activity-media-elem {
   padding: 3px;
 }
@@ -11694,7 +11699,7 @@ body.login .login-popup .mfp-close:hover {
   z-index: 0;
   min-height: 100%;
   width: auto;
-  min-width: auto;
+  min-width: 100%;
   object-fit: cover;
 }
 
