Fixed formatting of “Download” link in media popups, for Forum replies

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -803,6 +803,7 @@ span.dashicons.dashicons-admin-file:before {
 	}
 }
 
+#bbpress-forums .bb-media-model-container,
 #buddypress .bb-media-model-wrapper.document-theatre {
 
 	.activity-list.bp-list {
