--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2607,11 +2607,13 @@ span.dashicons.dashicons-admin-file:before {
   overflow: visible;
 }
 
+#bbpress-forums .bb-media-model-container .activity-list.bp-list,
 #buddypress .bb-media-model-wrapper.document-theatre .activity-list.bp-list {
   position: relative;
   display: inline-block;
 }
 
+#bbpress-forums .bb-media-model-container .activity-list.bp-list .activity-item,
 #buddypress .bb-media-model-wrapper.document-theatre .activity-list.bp-list .activity-item {
   margin-bottom: 40px;
   max-height: calc(90vh - 40px);
@@ -2619,6 +2621,7 @@ span.dashicons.dashicons-admin-file:before {
   position: static;
 }
 
+#bbpress-forums .bb-media-model-container .activity-list.bp-list .download-document,
 #buddypress .bb-media-model-wrapper.document-theatre .activity-list.bp-list .download-document {
   position: absolute;
   bottom: 0;
