Fixed formatting of “Download” link in media popups, for Forum replies

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -834,6 +834,7 @@ span.dashicons.dashicons-admin-file:before {
 	}
 }
 
+#bbpress-forums .bb-media-model-container,
 #buddypress .bb-media-model-wrapper.media-theatre {
 
 	.activity-list.bp-list {
