--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -552,14 +552,15 @@
 	}
 }
 
-.bb-media-model-container {
+#bbpress-forums .bb-media-model-container,
+#buddypress .bb-media-model-container {
 	max-width: 90%;
 	min-width: 90%;
 	position: relative;
 	margin: auto;
 	padding: 20px 0;
 
-	#buddypress & .activity-list {
+	.activity-list {
 		border: 0;
 		margin: 0;
 		padding: 0;
