link preview formatting in activity feed

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -567,10 +567,10 @@ ul.medium-editor-toolbar-actions {
 	color: #82878c;
 	background: #fff;
 	border: 1px solid #e5e5e5;
+	border-radius: 3px;
 	position: relative;
 	overflow: auto;
 	zoom: 1;
-	margin: 0 -3px;
 
 	+ .bb-activity-media-wrap {
 		margin-top: 10px;
