#944 - Register screen, password should get an "eye" to toggle it on and off.

--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3904,6 +3904,27 @@ body.register .registration-popup .mfp-close:hover {
   color: #fff;
 }
 
+.bb-password-wrap {
+  position: relative;
+}
+
+.bb-password-wrap a.bb-toggle-password {
+  color: rgba(18, 43, 70, 0.5);
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 50px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.bb-password-wrap .bb-show-pass .bb-icon-eye:before {
+  content: "\e8fc";
+}
+
 /**
 *----------------------------------------------------------
 * @section 4.1 - Groups Creation Steps
