--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -178,6 +178,27 @@
 			}
 		}
 
+		.thread-multiple-avatar {
+			min-height: 45px;
+			min-width: 45px;
+			position: relative;
+
+			img.avatar {
+				border: 2px solid #fff;
+				max-width: 34px;
+				position: absolute;
+				left: 0;
+				top: 0;
+
+				+ img {
+					top: auto;
+					right: 0;
+					bottom: 0;
+					left: auto;
+				}
+			}
+		}
+
 	}
 
 	// close li
