--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -5498,6 +5498,27 @@ div.profile_completion_wrap ul.pc_detailed_progress li.incomplete span.completed
   width: 100%;
 }
 
+#message-threads .bp-message-link .thread-multiple-avatar {
+  min-height: 45px;
+  min-width: 45px;
+  position: relative;
+}
+
+#message-threads .bp-message-link .thread-multiple-avatar img.avatar {
+  border: 2px solid #fff;
+  max-width: 34px;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+#message-threads .bp-message-link .thread-multiple-avatar img.avatar + img {
+  top: auto;
+  right: 0;
+  bottom: 0;
+  left: auto;
+}
+
 #message-form-submit-wrapper,
 #message-reply-form-submit-wrapper {
   display: flex;
