#944 - Register screen, password should get an "eye" to toggle it on and off.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
@@ -241,7 +241,7 @@ body.register {
 		display: inline-flex;
 		align-items: center;
 		justify-content: center;
-		text-decoration: none;
+		text-decoration: none !important;
 	}
 
 	.bb-show-pass {
