--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -3918,7 +3918,7 @@ body.register .registration-popup .mfp-close:hover {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 .bb-password-wrap .bb-show-pass .bb-icon-eye:before {
