--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -14703,12 +14703,16 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   text-align: right !important;
 }
 
+.modal-container .error-box,
 #bp-media-create-folder .error-box {
   display: none;
   line-height: 1.3;
   margin-top: 5px;
 }
 
+.modal-container #bb-album-child-title.error + .error-box,
+.modal-container #bb-album-title.error + .error-box,
+#bp-media-create-folder #bb-album-child-title.error + .error-box,
 #bp-media-create-folder #bb-album-title.error + .error-box {
   display: block;
 }
