--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -198,7 +198,14 @@
 				}
 			}
 		}
+	}
 
+	.bp-message-link:hover,
+	.current .bp-message-link {
+
+		.thread-multiple-avatar img.avatar {
+			border-color: #f5f6f7;
+		}
 	}
 
 	// close li
