--- a/src/bp-templates/bp-nouveau/common-styles/_bp_comment_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_comment_form.scss
@@ -96,3 +96,49 @@ form.ac-form {
 .activity-comments form.root {
 	margin-left: 0;
 }
+
+/** Modal **/
+.edit-activity-modal {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	opacity: 0;
+	visibility: hidden;
+	transform: scale(1.1);
+	transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.edit-activity-modal-content {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #fff;
+	padding: 10px 15px;
+	width: 300px;
+	border-radius: 5px;
+}
+
+.edit-activity-modal-close-button {
+	float: right;
+	width: 15px;
+	line-height: 15px;
+	text-align: center;
+	cursor: pointer;
+	border-radius: 3px;
+	background-color: #d3d3d3;
+}
+
+.edit-activity-modal-close-button:hover {
+	background-color: #a9a9a9;
+}
+
+.show-modal {
+	opacity: 1;
+	visibility: visible;
+	transform: scale(1);
+	transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
