--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -181,6 +181,7 @@
 		.thread-multiple-avatar {
 			min-height: 45px;
 			min-width: 45px;
+			margin: 0 -2px;
 			position: relative;
 
 			img.avatar {
