#561 - Show cover image at saved position

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
@@ -44,6 +44,11 @@
 		display: none;
 	}
 
+	&.has-position .header-cover-img {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
+
 	.header-cover-reposition-wrap {
 		overflow: hidden;
 		height: 100%;
